syntax = "proto3";
package Tea;

service Tea {
    rpc RetrieveTeaByPrefix(RetrieveTeaByPrefixReq) returns (TeaMessage){}
    rpc RetrieveUPNByEntity(RetrieveByEntityReq) returns (UPNMessage) {}
    rpc RetrieveUPNByEntityId(RetrieveByEntityIdReq) returns (UPNMessage) {}
    rpc ReportTeaSuccess(ReportTeaReq) returns (SuccessMessage) {}
    rpc ReportTeaFail(ReportTeaReq) returns (SuccessMessage) {}
    rpc ThrowTea(ReportTeaReq) returns (SuccessMessage) {}

    rpc GetPrefix(GetPrefixReq) returns (Prefix){}
    rpc AddPrefix(AddPrefixReq) returns (Prefix){}
    rpc UpdatePrefix(UpdatePrefixReq) returns (Prefix){}
    rpc DeletePrefix(DeletePrefixReq) returns (SuccessMessage){}
    rpc GetAllPrefixes(GetAllPrefixesReq) returns (PrefixArray){}
}
message GetAllPrefixesReq{

}

message RetrieveTeaByPrefixReq{
 string prefix = 1;
}

message TeaMessage{
    string tea = 1;
}

message UPNMessage{
    string upn = 1;
}

message UpdatePrefixReq{
    string prefix = 1;
    PrefixProperties properties = 2;
}

message DeletePrefixReq{
    string prefix = 1;
}

message GetPrefixReq{
    string prefix = 1;
}

message AddPrefixReq{
    string prefix = 1;
    int32 currentCounter = 2;
}

message Prefix{
    string prefix = 1; //1234
    int32 currentCounter = 2;
    repeated string teaInProgress = 3;
    repeated string failedTea = 4;
    int64 createdAt = 5;
}

message PrefixArray{
    repeated Prefix prefixes = 1;
    int32 totalCount = 2;
}

message PrefixProperties{
    optional string prefix = 1;
    optional string currentCounter = 2;
    repeated string teaInProgress = 3;
    repeated string failedTea = 4;
}

message ReportTeaReq{
    string tea = 1;
}

enum Domain{
    OLD = 0;
    NEW = 1;
}

message SuccessMessage{
    bool success = 1;
}

message RetrieveByEntityReq{
    Domain domain = 1;
    EntityMin entity = 2;
}

message RetrieveByEntityIdReq{
    Domain domain = 1;
    string entityId = 2;
}

message EntityMin{
    string entityType = 1;
    string akaUnit = 2;
    optional string personalNumber = 3;
    optional string identityCard = 4;
    optional string goalUserID = 5;
    optional string firstName = 6;
    optional string lastName = 7;
}

